# WatermanPolyhedron-

./: .gitmodules  CMakeLists.txt  NodeEditor.json  README.md  gitmodules  imgui.ini
cmake/: FindGLFW3.cmake
contrib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
include/: camera.h  imguiHelper.h  mesh.h  model.h  openGlError.h  shader.h  simpleGeometryCollection.h  texture.h  waterman_sphere.h
resources/shaders/: pointcloud.frag.glsl  pointcloud.vert.glsl  test.frag.glsl  test.vert.glsl  test3dTex.frag.glsl  test3dTex.vert.glsl  texturedQuad.frag.glsl
src/: camera.cpp  main.cpp  shader.cpp  simpleGeometryCollection.cpp  waterman_sphere.cpp
